[gd_scene load_steps=4 format=2]

[ext_resource path="res://server/game.gd" type="Script" id=1]
[ext_resource path="res://server/faustctf.glb" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3, 3, 3 )

[node name="Lobby" type="Node"]
script = ExtResource( 1 )

[node name="Team0" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 16 )
collision_layer = 2147485696
collision_mask = 2147486720

[node name="CollisionShape" type="CollisionShape" parent="Team0"]
shape = SubResource( 1 )

[node name="Team1" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 18 )
collision_layer = 1024
collision_mask = 3072

[node name="CollisionShape" type="CollisionShape" parent="Team1"]
shape = SubResource( 1 )

[node name="faustctf" parent="." instance=ExtResource( 2 )]
[connection signal="body_entered" from="Team0" to="." method="_on_flag_body_entered" binds= [ 0 ]]
[connection signal="body_entered" from="Team1" to="." method="_on_flag_body_entered" binds= [ 1 ]]
